--- a/package.json
+++ b/package.json
@@ -75,8 +75,11 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "heroku-postbuild": "npm run build"
   },
+
+  
   "eslintConfig": {
     "extends": "react-app"
   },
