--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "bootstrap": "^4.5.0",
     "browser-image-compression": "^1.0.12",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -51,6 +52,8 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-typeahead": "^5.0.0-rc.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
@@ -58,6 +61,7 @@
     "react-html-parser": "^2.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-tag-autocomplete": "^5.13.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -78,8 +82,6 @@
     "test": "node scripts/test.js",
     "heroku-postbuild": "npm run build"
   },
-
-  
   "eslintConfig": {
     "extends": "react-app"
   },
