--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-tag-autocomplete": "^5.13.1",
+    "react-toastify": "^6.0.6",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
