--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 HTTPS=true
+SSL_CRT_FILE=/etc/letsencrypt/live/dev.pranavgoel.in/fullchain.pem 
+SSL_KEY_FILE=/etc/letsencrypt/live/dev.pranavgoel.in/privkey.pem
