responsive of newpetblog

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-facebook-login": "^4.1.1",
     "react-froala-wysiwyg": "^3.1.1-1",
     "react-html-parser": "^2.0.2",
+    "react-image-file-resizer": "^0.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-tag-autocomplete": "^5.13.1",
