--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-froala-wysiwyg": "^3.1.1-1",
     "react-html-parser": "^2.0.2",
     "react-image-file-resizer": "^0.3.1",
+    "react-quill": "^1.3.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-tag-autocomplete": "^5.13.1",
