--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-quill": "^1.3.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.26.1",
     "react-tag-autocomplete": "^5.13.1",
     "react-toastify": "^6.0.6",
     "resolve": "1.15.0",
@@ -70,6 +71,7 @@
     "sass-loader": "8.0.2",
     "save": "^2.4.0",
     "semver": "6.3.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
