--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "save": "^2.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "semver": "6.3.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
