--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "@version/react-router-v3": "^1.0.0",
     "aos": "^2.3.4",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
@@ -62,7 +63,7 @@
     "react-html-parser": "^2.0.2",
     "react-image-file-resizer": "^0.3.1",
     "react-quill": "^1.3.5",
-    "react-router": "^5.2.0",
+    "react-router": "^3.2.6",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.26.1",
     "react-tag-autocomplete": "^5.13.1",
