--- a/package.json
+++ b/package.json
@@ -13,11 +13,6 @@
     "@version/react-router-v3": "^1.0.0",
     "aos": "^2.3.4",
     "axios": "^0.19.2",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.2",
     "bootstrap": "^4.5.0",
     "browser-image-compression": "^1.0.12",
     "camelcase": "^5.3.1",
@@ -65,6 +60,7 @@
     "react-quill": "^1.3.5",
     "react-router": "^3.2.6",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.3.0",
     "react-slick": "^0.26.1",
     "react-tag-autocomplete": "^5.13.1",
     "react-toastify": "^6.0.6",
@@ -79,17 +75,13 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "url-loader": "2.3.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "heroku-postbuild": "npm run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
